new Double --> Double.valueOf (#142)
* new Double --> Double.valueOf

* use NaN constant