@@ -76,7 +76,7 @@ class DefaultModExpr extends DefaultMultiplicativeExpr
                                                    context.getNavigator() );
 
         double result = lhsValue.doubleValue() % rhsValue.doubleValue();
-        return new Double( result );
+        return Double.valueOf( result );
     }
 
 }
