@@ -77,7 +77,7 @@ class DefaultMultiplyExpr extends DefaultMultiplicativeExpr
 
         double result = lhsValue.doubleValue() * rhsValue.doubleValue();
 
-        return new Double( result );
+        return Double.valueOf( result );
     }
 
 }
