@@ -125,10 +125,7 @@ import org.jaxen.Navigator;
  *      target="_top">Section 4.4 of the XPath Specification</a>
  */
 public class NumberFunction implements Function
-{
-
-    private final static Double NaN = new Double( Double.NaN );
-    
+{    
     
     /**
      * Create a new <code>NumberFunction</code> object.
@@ -183,12 +180,12 @@ public class NumberFunction implements Function
             String str = (String) obj;
             try
             {
-                Double doubleValue = new Double( str );        
+                Double doubleValue = Double.valueOf( str );        
                 return doubleValue;
             }
             catch (NumberFormatException e)
             {
-                return NaN;
+                return Double.NaN;
             }
         }
         else if ( obj instanceof List || obj instanceof Iterator )
@@ -205,14 +202,14 @@ public class NumberFunction implements Function
           {
           if ( Boolean.TRUE.equals(obj) )
           {
-              return new Double( 1 );
+              return Double.valueOf( 1 );
           }
           else
           {
-              return new Double( 0 );
+              return Double.valueOf( 0 );
           }
         }    
-        return NaN;
+        return Double.NaN;
     }
   
   /**
@@ -236,7 +233,7 @@ public class NumberFunction implements Function
    */
     public static boolean isNaN( Double val )
     {
-        return val.equals( NaN );
+        return val.equals( Double.NaN );
     }  
   
 }
